GO to spring boot 2.4.3 + Java 11